# ai-core

./: .gitignore  CLAUDE.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4663838dbf23_initial_migration_from_prisma_schema.py
src/: __init__.py  ai_service.py  database.py  models.py  pydantic_models.py
src/agents/: __init__.py  base_agent.py  manager_agent.py
src/models/: __init__.py  base.py  conversation.py  group.py  user.py
src/services/: __init__.py  database_service.py
