[project]
name = "ai-core"
version = "0.1.0"
description = "AI Core Service for Multi-Client Chatbot"
authors = [
    {name = "luisotee",email = "luisotaviomgr1@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "smolagents (>=1.21.3,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
