[tool.poetry]
name = "ai-core"
version = "0.1.0"
description = "AI Core Service for Multi-Client Chatbot"
authors = ["luisotee <luisotaviomgr1@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
smolagents = "^1.21.3"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
